--- a/emissaoNFEFront/src/app/components/form-emissao-nfe/form-emissao-nfe.component.html
+++ b/emissaoNFEFront/src/app/components/form-emissao-nfe/form-emissao-nfe.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <h1 class="text-center mb-4">Formulário para emissão de NFS-e</h1>
-    <form (ngSubmit)="gerarXML()">
+    <form action="post" (ngSubmit)="gerarXML()">
         <div class="row">
             <div class="col">
                 <h3>Identificação do prestador de serviço</h3>
